<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.appdockproject.appdock.navbar"
    android:translationZ="@dimen/abc_action_bar_content_inset_material"
    android:background="@color/colorAccent"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:weightSum="7"
        android:background="@android:color/holo_green_dark"
        android:transitionGroup="true">


        <ImageButton
            android:layout_width="152dp"
            android:layout_height="150dp"
            android:id="@+id/logo"
            android:src="@drawable/logo"
            android:layout_weight="2"
            android:background="@color/highlighted"

            android:theme="@style/Base.Widget.AppCompat.ActionButton"
            android:layout_margin="10dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
<<<<<<< HEAD
            android:text="Applications"
=======
            android:text="@string/appTitleBtn"
>>>>>>> e1efdef8fedf7a4fbc649b7db072f19fa95e389b
            android:id="@+id/appBtn"
            android:layout_weight="1"
            android:background="@color/highlighted"
            android:theme="@style/Base.Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_margin="15dp"
            android:textColor="@color/abc_primary_text_material_dark"
            android:clickable="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
<<<<<<< HEAD
            android:text="Développeurs"
=======
            android:text="@string/devTitleBtn"
>>>>>>> e1efdef8fedf7a4fbc649b7db072f19fa95e389b
            android:id="@+id/devBtn"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:theme="@style/Base.Widget.AppCompat.ActionButton"
            android:layout_margin="15dp"
            android:textColor="@color/abc_primary_text_material_dark" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
<<<<<<< HEAD
            android:text="Education"
=======
            android:text="@string/eduTitleBtn"
>>>>>>> e1efdef8fedf7a4fbc649b7db072f19fa95e389b
            android:id="@+id/eduBtn"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:theme="@style/Base.Widget.AppCompat.ActionButton"
            android:layout_margin="15dp"
            android:textColor="@color/abc_primary_text_material_dark" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
<<<<<<< HEAD
            android:text="Commentaires"
=======
            android:text="@string/surveyTitleBtn"
>>>>>>> e1efdef8fedf7a4fbc649b7db072f19fa95e389b
            android:id="@+id/comBtn"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:theme="@style/Base.Widget.AppCompat.ActionButton"
            android:layout_margin="15dp"
            android:textColor="@color/abc_primary_text_material_dark" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
<<<<<<< HEAD
            android:text="Facebook"
=======
            android:text="@string/facebookTitleBtn"
>>>>>>> e1efdef8fedf7a4fbc649b7db072f19fa95e389b
            android:id="@+id/fbBtn"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:theme="@style/Base.Widget.AppCompat.ActionButton"
            android:layout_margin="15dp"
            android:textColor="@color/abc_primary_text_material_dark" />
    </LinearLayout>

</FrameLayout>
